# LUCY

./: .gitignore
.github/ISSUE_TEMPLATE/: feature_request.md  tickets.md
docker/ros/: Dockerfile_base
lucy_docker/ros2_ws/: Dockerfile_ros2_ws  docker-compose.yml
lucy_embed/: CMakeLists.txt  CMakePresets.json
lucy_embed/include/: pico_uart_transports.h
lucy_embed/src/: main.c
lucy_utils/: .envrc.example  InitEnv  Make
poc/: CMakeLists.txt  package.xml
